feat: добавлены новые методы для управления пользователем + небольшой рефактор роутинга
