# internal/api/dto/user.go
@@ -5,3 +5,8 @@ import (
 )
 
 type UserResponse models.User
+
+type SwitchPasswordRequest struct {
+	OldPassword string `json:"old_password" validate:"required,min=8,max=64"`
+	NewPassword string `json:"new_password" validate:"required,min=8,max=64,nefield=OldPassword"`
+}
